--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepublish": "tsc"
   },
   "dependencies": {
-    "fhir-works-on-aws-interface": "^1.0.0",
+    "fhir-works-on-aws-interface": "github:mgresko/fhir-works-on-aws-interface#INT-61",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
